<resources>
    <string name="app_name">FinalProject_2500</string>
    <string name="title_home">Last Event</string>
    <string name="title_dashboard">Next Event</string>
    <string name="title_notifications">Favorite</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="home_score">Home Score</string>
    <string name="titikdua">:</string>
    <string name="away_score">Away Score</string>
    <string name="versus">vs</string>
    <string name="league">League</string>
    <string name="season">Season</string>
    <string name="date">Date</string>
    <string name="date_event">Date Event</string>
    <string name="time">Time</string>
    <string name="venue">Venue</string>
    <string name="country">Country</string>
    <string name="round">Round</string>
    <string name="status">Status</string>
    <string name="favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="strip">-</string>
    <string name="detail">Detail</string>
    <string name="todo">TODO</string>
    <string name="hapus">Hapus</string>
</resources>