<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5pt"
    android:orientation="horizontal"
    android:padding="5pt">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgThumbScore"
            android:layout_width="124dp"
            android:layout_height="109dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_toEndOf="@id/imgThumbScore">

            <LinearLayout
                android:id="@+id/match"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/txtHomeTitle"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vs"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:text="@string/versus"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/txtAwayTitle"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:text="@string/away"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/match"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/txtHomeScore"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_score"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/titikdua"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:text="@string/titikdua"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAwayScore"
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="@string/away_score"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDateScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"
                android:text="@string/date_event"
                android:textAlignment="center"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDetailScore"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/detail"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>