<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity.DetailLastActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            card_view:cardCornerRadius="10dp"
            android:id="@+id/up">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtTitleLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/title"
                    android:textAlignment="center"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imgThumbLast"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:ignore="ContentDescription"
            android:layout_below="@id/up"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            card_view:cardCornerRadius="10dp"
            android:layout_below="@id/imgThumbLast"
            android:id="@+id/card_lay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center">

                <LinearLayout
                    android:id="@+id/match"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtHome"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/home"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="textEnd"/>

                    <TextView
                        android:id="@+id/vs"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/versus"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/txtAway"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/away"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="textStart"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/match">

                    <TextView
                        android:id="@+id/txtHomeScore"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/home_score"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textAlignment="textEnd"/>

                    <TextView
                        android:id="@+id/titikdua"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/titikdua"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/txtAwayScore"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/away_score"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textAlignment="textStart"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/LeaLeft"
                    style="@style/judulbox"
                    android:textSize="18sp"
                    android:text="@string/league"
                    android:layout_below="@id/score"/>


                <TextView
                    android:id="@+id/txtLeague"
                    android:layout_below="@id/score"
                    style="@style/keteranganbox"
                    android:layout_toEndOf="@id/LeaLeft"
                    android:text="@string/league"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/SeaLeft"
                    style="@style/judulbox"
                    android:textSize="18sp"
                    android:text="@string/season"
                    android:layout_below="@id/LeaLeft"/>

                <TextView
                    android:id="@+id/txtSeason"
                    style="@style/keteranganbox"
                    android:textSize="18sp"
                    android:text="@string/season"
                    android:layout_toEndOf="@id/SeaLeft"
                    android:layout_below="@id/txtLeague"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/DateLeft"
                    style="@style/judulbox"
                    android:textSize="18sp"
                    android:text="@string/date"
                    android:layout_below="@id/SeaLeft"/>

                <TextView
                    android:id="@+id/txtDateLast"
                    style="@style/keteranganbox"
                    android:layout_toEndOf="@id/DateLeft"
                    android:textSize="18sp"
                    android:text="@string/date_event"
                    android:layout_below="@id/txtSeason"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/TimeLeft"
                    style="@style/judulbox"
                    android:textSize="18sp"
                    android:text="@string/time"
                    android:layout_below="@id/DateLeft"/>

                <TextView
                    android:id="@+id/txtTimeLast"
                    style="@style/keteranganbox"
                    android:textSize="18sp"
                    android:layout_toEndOf="@id/TimeLeft"
                    android:text="@string/time"
                    android:layout_below="@id/txtDateLast"/>

                <TextView
                    android:id="@+id/VenueLeft"
                    style="@style/judulbox"
                    android:textSize="18sp"
                    android:text="@string/venue"
                    android:layout_below="@id/TimeLeft"/>

                <TextView
                    android:id="@+id/txtVenue"
                    style="@style/keteranganbox"
                    android:textSize="18sp"
                    android:layout_toEndOf="@id/VenueLeft"
                    android:text="@string/venue"
                    android:layout_below="@id/txtTimeLast"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/CountryLeft"
                    style="@style/judulbox"
                    android:textSize="18sp"
                    android:text="@string/country"
                    android:layout_below="@id/VenueLeft"/>

                <TextView
                    android:id="@+id/txtCountry"
                    style="@style/keteranganbox"
                    android:textSize="18sp"
                    android:layout_toEndOf="@id/CountryLeft"
                    android:text="@string/country"
                    android:layout_below="@id/txtVenue"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/RoundLeft"
                    style="@style/judulbox"
                    android:textSize="18sp"
                    android:text="@string/round"
                    android:layout_below="@id/CountryLeft"/>

                <TextView
                    android:id="@+id/txtRound"
                    style="@style/keteranganbox"
                    android:textSize="18sp"
                    android:layout_toEndOf="@id/RoundLeft"
                    android:text="@string/round"
                    android:layout_below="@id/txtCountry"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/StatusLeft"
                    style="@style/judulbox"
                    android:textSize="18sp"
                    android:text="@string/status"
                    android:layout_below="@id/RoundLeft"/>

                <TextView
                    android:id="@+id/txtStatus"
                    style="@style/keteranganbox"
                    android:layout_toEndOf="@id/StatusLeft"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/redlight"
                    android:text="@string/status"
                    android:layout_below="@id/txtRound"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:id="@+id/layout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:layout_margin="16dp"
                    android:paddingBottom="16dp"
                    android:layout_below="@+id/txtStatus">

                    <Button
                        android:id="@+id/btnFavorite"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/favorite"
                        android:textSize="12sp"/>
                </LinearLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>