<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5pt"
    android:orientation="horizontal"
    android:padding="5pt">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgThumbFavor"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="9dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5pt"
            android:layout_toEndOf="@id/imgThumbFavor">

            <TextView
                android:id="@+id/txtTitleFavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:text="@string/title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDateFavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"
                android:text="@string/date_event" />

            <TextView
                android:id="@+id/txtTimeFavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"
                android:text="@string/time" />

            <TextView
                android:id="@+id/txtStatusFavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/status" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:clickable="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHapusFavor"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/hapus"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>