<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5pt"
    android:orientation="horizontal"
    android:padding="5pt">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgThumbUtama"
            android:layout_width="149dp"
            android:layout_height="128dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_toEndOf="@id/imgThumbUtama">

            <TextView
                android:id="@+id/txtTitleUtama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="4dp"
                android:text="@string/title"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDateUtama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"
                android:text="@string/date_event" />

            <TextView
                android:id="@+id/txtTimeUtama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                android:text="@string/time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDetailUtama"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/detail"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>